# falco-libs

cmake/modules/: CompilerFlags.cmake  libscap.cmake  libsinsp.cmake
driver/: CMakeLists.txt  README.API_VERSION  dkms.conf.in  main.c  ppm_events_public.h
userspace/common/: types.h
userspace/libscap/: CMakeLists.txt  clock_helpers.h  common_types.h  ppm_sc_names.c  scap-int.h  scap.c  scap.def  scap.h  scap_bpf.c  scap_config.h.in  scap_engine_util.c  scap_engine_util.h  scap_engines.h  scap_limits.h  scap_machine_info.h  scap_open.h  scap_platform.c  scap_platform_api.c  scap_platform_api.h  scap_platform_impl.h  scap_platforms.h  scap_procs.c  scap_savefile.c  scap_savefile.h  scap_savefile_api.h  scap_stats_v2.h  scap_suppress.c  scap_vtable.h
userspace/libsinsp/: CMakeLists.txt  dumper.cpp  dumper.h  event.h  fdinfo.cpp  ifinfo.cpp  ifinfo.h  parsers.cpp  plugin.cpp  plugin.h  plugin_table_api.cpp  sinsp.cpp  sinsp.h  sinsp_exception.cpp  sinsp_exception.h  sinsp_filtercheck_event.cpp  sinsp_filtercheck_fd.cpp  sinsp_reader.cpp  sinsp_reader.h  sinsp_resource_utilization.cpp  sinsp_resource_utilization.h  tuples.cpp  (+5 more)
userspace/libsinsp/platform/: CMakeLists.txt  addrlist_linux.cpp  addrlist_linux.h  machineinfo.cpp  machineinfo.h  sinsp_dumper_utils.cpp  sinsp_dumper_utils.h  sinsp_platform.cpp  sinsp_platform.h  sinsp_platform_linux.cpp  sinsp_platform_linux.h  sinsp_platform_savefile.cpp  sinsp_platform_savefile.h  sinsp_platform_scapwrapper.cpp  sinsp_platform_scapwrapper.h  sinsp_reader_utils.cpp  sinsp_reader_utils.h  userlist_linux.cpp  userlist_linux.h
(+68 files in other folders)
